# Mandroids-Navigation

./: #Kalman.java#  #robotFunctions.java#  .#Kalman.java  .#main.java  .#robotFunctions.java  .gitignore  CMakeLists.txt  Kalman.java  Navigation.java  README.md  Sprint2.java  cam.conf  commandline.java  data1.txt  data2.txt  data3.txt  data4.txt  data5.txt  data6.txt  data7.txt  data8.txt  data9.txt  main.cpp  main.java  regression.py  remote.py  remote_control.java  robotFunctions.java  rotation.py  server.py  sprint3.py  sprint3.txt  test.py
data/: data1.txt  data7.txt  data8.txt  encoderdata.txt
tests/: Nav_unused.java  Sprint2.java  commandline.java  remote_control.java  rotation.py  sprint3.py
